# TFG_LearningByDemo_Ur3e

./: README.md  READMEEsp.md
auxiliary_tools/YOLO_train/: README.md  cap.py  data.yaml  requeriments.txt  retrain_doll_yolo.py  split_dataset.py  test_onnx_inference.py  train_doll_yolo.py
auxiliary_tools/cam_cal/: CalibrationStereo.py  README.md
auxiliary_tools/cam_cal/data/: R.npy  T.npy  camera_matrix_cam1.npy  camera_matrix_cam2.npy  dist_coeffs_cam1.npy  dist_coeffs_cam2.npy  extrinsic_matrix_cam1.npy  extrinsic_matrix_cam2.npy
data/learned_dmps/: dmp_final_final.pkl  dmp_grasping_to_rotating.pkl  dmp_initial_idle.pkl  dmp_rotating_separated.pkl
learning_and_validation/: README.md  learn_dmp.py  validate_compare_kinematic_mapping.py
robot_control/: README.md
robot_control/ws_moveit/.catkin_tools/profiles/default/: devel_collisions.txt
robot_control/ws_moveit/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
robot_control/ws_moveit/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
robot_control/ws_moveit/devel/.private/demo/: .catkin  local_setup.sh
robot_control/ws_moveit/devel/.private/gripper_action/: .catkin  setup.sh
robot_control/ws_moveit/devel/lib/: libmoveit_lerp_planner_plugin.so.0.1.0
robot_control/ws_moveit/hand_eye_data/: robot_poses.csv
robot_control/ws_moveit/src/gripper_action/: CMakeLists.txt  package.xml
robot_control/ws_moveit/src/onrobot_gripper_action/: CMakeLists.txt
robot_control/ws_moveit/src/onrobot_gripper_action/src/: joint_states_updater.cpp  onrobot_gripper_action.cpp
robot_control/ws_moveit/src/onrobot_gripper_msgs/: CMakeLists.txt  package.xml
robot_control/ws_moveit/src/onrobot_gripper_msgs/action/: OnrobotGripperCommand.action
robot_control/ws_moveit/src/ur3e_control/: CMakeLists.txt
vision_system/: README.md  README.txt  main_script_grabacion.py  vision_utils.py
(+735 files in other folders)
